frontend/src/App.scss
@import '~materialize-css/sass/components/color-variables';
$primary-color: color('blue', 'base') !default;
$secondary-color: color('blue', 'accent-1') !default;
@import '~materialize-css/sass/components/color-classes';
@import '~materialize-css/sass/components/_variables';
@import '~materialize-css/sass/materialize';

@import './components/organisms/PomodoroTimer';
@import './components/organisms/PomodoroGroup';
@import './components/organisms/TopNavigation';
@import './components/organisms/SideNavigation';
@import './views/SignIn';
@import './views/SignUp';
.parallax-container {
  height: 400px;
}

.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #09d3ac;
}

.flexbox {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
}

.footer-copyright {
  background-color: transparent !important;
}

span.badge.new {
  font-weight: 300;
  font-size: 1.2rem;
  color: #fff;
  background-color: #82b1ff;
  border-radius: 2px;
}

span.badge {
  min-width: 3rem;
  padding: 0 9px;
  margin-left: 14px;
  text-align: center;
  font-size: 1rem;
  line-height: 25px;
  height: 27px;
  color: #757575;
  float: right;
  box-sizing: border-box;
}

html {
  height: 100%;
}
body {
  min-height: 100%;
  position: relative;
  padding-bottom: 20px;
  background: #f6f8fa !important;
}
footer {
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
}
.page-footer {
  padding: 0;
}

.page-footer .row {
  margin-bottom: 0px;
}

